--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 							<li>電話 : (03) 3123-4567</li>
 							<li>信箱 : hsinchu@gmail.com.tw </li>
 						</ul>
-						<button id="footer-btn">給我們留言</button>
+						<button id="footer-btn"><a href="message-box.html" target="_blank" title="建議我們">給我們留言</a></button>
 						<p>定期收到動物園最新消息。</p>
 						<ul class="d-flex justify-content-center align-items-center text-center">
 							<li class="m-3" title="大眾運輸交通"><i class="fas fa-car"></i>交通指南</li>
@@ -376,7 +376,6 @@
 	</aside>
 
 	<script src="js/public.js"></script>
-	<script src="js/index/index.js"></script>
 
 	<!-- Boostrap JS -->
 	<script src="lib/js/jquery-3.6.min.js"></script>
