--- a/test.html
+++ b/test.html
@@ -167,20 +167,20 @@
 				console.log("天氣現象: " , data.records.locations[0].location[0].weatherElement[6]);
 
 				// 一周 平均溫度
-				let temperature = data.records.locations[0].location[0].weatherElement[1].time;
-				// 一周 天氣現象 (Weather phenomenon)
-				let weatherPhenomenon = data.records.locations[0].location[0].weatherElement[6].time;
+				let temp = data.records.locations[0].location[0].weatherElement[1].time;
+				// 一周 天氣現象
+				let ijk = data.records.locations[0].location[0].weatherElement[6].time;
 
 				// 晚上 (天氣現象)
 				let oddArray = [];
 				// 白天 (天氣現象)
-				let evenArray = [];
-				for(let k in weatherPhenomenon){
+				let even = [];
+				for(let k in ijk){
 					if(k%2 !== 0){
 						// console.log(k); // 1 3 5 7 9 13  晚上 
-						oddArray.push(weatherPhenomenon[k]);
+						oddArray.push(ijk[k]);
 					}else{
-						evenArray.push(weatherPhenomenon[k]);
+						even.push(ijk[k]);
 					}
 				}
 
@@ -188,12 +188,12 @@
 				let oddTemp = [];
 				// 白天 (平均溫度)
 				let evenTemp = []; 
-				for(let k in temperature){
+				for(let k in temp){
 					if(k%2 !== 0){
 						// 1 3 5 7 9 13  晚上 
-						oddTemp.push(temperature[k]);
+						oddTemp.push(temp[k]);
 					}else{
-						evenTemp.push(temperature[k]);
+						evenTemp.push(temp[k]);
 					}
 				};
 
@@ -202,7 +202,6 @@
 					let now = new Date(obj);
 					let date = ('0' + (now.getMonth() + 1 )).slice(-2) + "/"+ ('0' + now.getDate()).slice(-2);
 					let weekday = ['星期日', '星期一', '星期二', '星期三', '星期四', '星期五', '星期六'];
-					// [ 日期 , 星期幾 ] 
 					return [date, weekday[now.getDay()]];   				
 				};
 
@@ -213,9 +212,9 @@
 								switch(i){
 									case 0: // 白天
 									locationData += `<td>
-										<span> ${(dataToLocal(evenArray[j].startTime))[0]}<br>
-											${(dataToLocal(evenArray[j].startTime))[1]}<br>白天</span><br>
-										<img src="images/weather-icons-t/day/${evenArray[j].elementValue[0].value}.svg" title="${evenArray[j].elementValue[0].value}"/><br>
+										<span> ${(dataToLocal(even[j].startTime))}<br>
+											<br>白天</span><br>
+										<img src="images/weather-icons-t/day/${even[j].elementValue[0].value}.svg" title="${even[j].elementValue[0].value}"/><br>
 										平均 ${evenTemp[j].elementValue[0].value}<span>°C</span>
 									</td>`;
 									break;
