--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="col-sm-12 col-md-4 d-flex justify-content-center">
 					<div class="center" id="app">
 						<div class="front-face ">
-								<div class="txt-pic front">
+								<div class="txt-pic front" v-cloak>
 									<div class="time"><span>{{time}}</span></div>
 									<p>{{WEATHER.city}} , &nbsp;&nbsp; {{WEATHER.country}}</p>
 									<div class="weather">
