--- a/message-box.html
+++ b/message-box.html
@@ -39,7 +39,7 @@
 					<div class="form-group row">
 						<label for="name" class="col-sm-2 col-form-label">您的大名：</label>
 						<div class="col-sm-10">
-							<input type="text" class="form-control" id="name" name="name" size="8" maxlength="6" placeholder="請輸入" required>
+							<input type="text" class="form-control" id="name" name="name" size="8" maxlength="6" placeholder="請輸入" required autofocus>
 						</div>
 					</div>
 					<div class="form-group row">
