--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 			});		
 	</script>
 
-	<!--  header-logo, footer-logo, footer-icon 提示框 -->
+	<!--  footer-icon 提示框 -->
 	<script>
 		$(function () {
 			$('[data-toggle="tooltip"]').tooltip();
