--- a/message-box.html
+++ b/message-box.html
@@ -84,7 +84,7 @@
 							<span class="field-required">*</span>問題內容：
 					</label>
 					  <div class="col-sm-10">
-							<textarea class="form-control " id="message" name="message" rows="9" cols="56" placeholder="請輸入內容" required></textarea><br> (請勿超過 1000個字)
+							<textarea class="form-control " id="message" name="message" rows="9" cols="56" placeholder="請輸入內容" required></textarea><br> (文字請勿超過 1000字)
 					  </div>
 					</div>
 					<div class="form-group row">
