--- a/index.html
+++ b/index.html
@@ -326,12 +326,12 @@
 							<li>電話 : (03) 3123-4567</li>
 							<li>信箱 : hsinchu@gmail.com.tw </li>
 						</ul>
-						<button id="footer-btn"><a href="message-box.html" target="_blank" title="建議我們">給我們留言</a></button>
+						<button id="footer-btn"><a href="message-box.html" title="建議我們">給我們留言</a></button>
 						<p>定期收到動物園最新消息。</p>
 						<ul class="d-flex justify-content-center align-items-center text-center">
-							<li class="m-3"><i class="fas fa-car"></i><a href="bus-API.html" target="_blank"  title="大眾運輸交通">交通指南</a></li>
+							<li class="m-3"><i class="fas fa-car"></i><a href="bus-API.html" title="大眾運輸交通">交通指南</a></li>
 							<li class="m-3 dirMap" title="Google Map"><i class="fas fa-map-marker-alt"></i>導覽地圖</li>
-							<li class="m-3 cloud"><i class="fas fa-cloud-download-alt"></i><a href="weather-API.html" target="_blank" title="一週氣象預報">即時氣象</a></li>
+							<li class="m-3 cloud"><i class="fas fa-cloud-download-alt"></i><a href="weather-API.html" title="一週氣象預報">即時氣象</a></li>
 							<!-- <li class="m-3"><i class="far fa-hand-point-right"></i>更多氣象</li> -->
 						</ul>
 						<p class="right">Copyright © 2022 Zoo Inc. All rights reserved.</p>
