--- a/bus-API.html
+++ b/bus-API.html
@@ -7,24 +7,21 @@
     <title>新竹市公車資訊</title> 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="lib/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/weather-API.css">
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css'>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<style>
-		#test h2{
-			color: #1a67b1;
+		#infomationBus>h2{
+			margin: 30px;
 			text-align: center;
-			border-bottom: 2px solid black;
-			width: 25%;
-			margin: 30px auto 50px;
 		}
-		table{
-			text-align: center;
+		img{
+			max-width: 600px;
+			margin-bottom: 40px;
 		}
 		@media(max-width:768px) {
-			#test h2{
+			#infomationBus h2{
 				font-size: 22px;
-				width: 60%;
+				overflow-x: scroll;
 			}
 		}
 	</style>
@@ -44,50 +41,46 @@
 		</div>
 	</div>
 
-	<div id="test">
+	<div id="infomationBus">
 		<h2>市區公車路線班表資料</h2>
 		<div class="container-fluid">
 			<div class="row">
-				<div id="busMap" class="col-12 col-sm-12 col-md-8 mr-auto ml-auto table-responsive-sm">
+				<div id="busMap" class="col-12 col-sm-12 col-md-10 mr-auto ml-auto table-responsive-sm text-center">
 				</div> 
 			</div>
 		</div>
 	</div>
+	<footer>
+		<div class="m-4">
+			<ul>
+				<li><a href="https://www.taiwanbus.tw/" data-toggle="tooltip" data-placement="right" title="得到更多公路運輸交通資訊">連結 公路客運即時動態資訊網</a></li>
+				<li><a href="https://tip.railway.gov.tw/tra-tip-web/tip" data-toggle="tooltip" data-placement="right" title="得到火車站資訊">連結 交通部臺灣鐵路管理局</a></li>
+			</ul>
+		</div>
+	</footer>
 
 	<script>
 		function doFirst(){
-			const weather = {};
 			let busMap = document.getElementById('busMap');
-			url="https://ptx.transportdata.tw/MOTC/v2/Bus/Schedule/City/Hsinchu?%24top=30&%24format=JSON";
+			url="https://ptx.transportdata.tw/MOTC/v2/Bus/Route/City/Hsinchu?%24top=30&%24format=JSON";
+			// /v2/Bus/Route/City/{City}   取得指定[縣市]的市區公車路線資料   市區公車之路線資料
+
+			let ijk = {} ;
 
 			fetch(url)
 			.then(function(response){
 				return response.json();
 			})
 			.then(function(data){
-				console.log(data[0].Timetables);					// 22
-				console.log(data[0].Timetables[0].StopTimes[0]); 
-
-				let busData = '<table class="table table-dark">';
-					busData += `<th scope="col">ArrivalTime</th><th scope="col">DepartureTime</th><th scope="col">StopName</th>`;
-				for(let i=0; i<data.length; i++){
-					// busData += '<tr>';
-						for(let j=0; j<data[i].Timetables.length; j++){
-							busData += `<tr><td>
-								到站時間: ${data[i].Timetables[j].StopTimes[0].ArrivalTime} <br>					
-								</td>`;
-							busData += `<td>
-								出發時間: ${data[i].Timetables[j].StopTimes[0].DepartureTime} <br>
-								</td>`;
-							busData += `<td>
-								站名: ${data[i].Timetables[j].StopTimes[0].StopName.Zh_tw} &nbsp;&nbsp;|&nbsp;&nbsp; ${data[i].Timetables[j].StopTimes[0].StopName.En}<br>
-								</td></tr>`;
-						}
-					// busData += '</tr>';
-				}
-				busData += '</table>';
+				let busData;
+				busData = `
+				<img src="${data[10].RouteMapImageUrl}">
+				<img src="${data[17].RouteMapImageUrl}">
+				<img src="${data[20].RouteMapImageUrl}">
+				<img src="${data[21].RouteMapImageUrl}">
+				<img src="${data[22].RouteMapImageUrl}">`;
 				busMap.innerHTML = busData;
-			})
+			});
 		}
 		window.addEventListener('load',doFirst);
 	</script>
@@ -110,3 +103,19 @@
 </body>
 </html>
 
+<!-- 
+	// CityBus 市區公車之路線資料
+	// https://ptx.transportdata.tw/MOTC/v2/Bus/Route/City/Hsinchu?%24top=30&%24format=JSON
+
+	// 市區公車路線班表資料(市區公車之班表及班距資料。一般市區公車班次較多時會採用【班距】式時刻表；班次較少時會採用【班表】式時刻表)
+	// https://ptx.transportdata.tw/MOTC/v2/Bus/Schedule/City/Hsinchu?%24top=30&%24format=JSON
+
+
+
+
+	// 新竹市立動物園110年度門票收入及入園人數統計表
+	// https://odws.hccg.gov.tw/001/Upload/25/opendataback/9059/622/5a276a5a-19c0-4df5-b2c4-5fbf9500ede0.json
+
+	// 新竹市動物園動物資料
+	// https://odws.hccg.gov.tw/001/Upload/25/OpenData/9059/16/e394cc37-0684-4a3c-87c1-d7aa1e11851b.json 
+-->
